[tool.poetry]
name = "data-boosting-method"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_boosting_method"}]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"

# data version control
dvc = ">=2.30.0, <3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.3"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

